Cropping error fixed

--- a/src/App.css
+++ b/src/App.css
@@ -109,10 +109,6 @@
   section {
     font-size: 1.1em;
   }
-  .each-slide-effect > div {
-    height: 400px !important;
-    margin-top:50px;    
-  }
 }
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
